log
Fri Mar 18 11:30:26 HSP 2022: 
 list.c | 18 ++++++++++++++----
 1 file changed, 14 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
0fd6f9e
Fri Mar 18 11:32:13 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
79adea3
Fri Mar 18 11:40:02 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
9ad43be
Fri Mar 18 11:47:42 HSP 2022: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
b144cd4
Fri Mar 18 11:49:07 HSP 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
363d39f
Fri Mar 18 11:50:33 HSP 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|5
total_score: 10/70
3222756
Fri Mar 18 11:52:53 HSP 2022: 
 list.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
897d513
Fri Mar 18 11:54:33 HSP 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3a70a07
Fri Mar 18 11:56:44 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fd3ad9d
